# energy-price-shock

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  pyproject.toml  run_analysis.py  vercel.json
.github/workflows/: pull_request.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  index.css
dashboard/src/app/: globals.css
dashboard/src/components/: ConstituencyMap.jsx  Dashboard.css  Dashboard.jsx  RegionMap.jsx
dashboard/src/data/: constituency_results.json  constituency_results_northern_ireland.json  constituency_results_scotland.json  constituency_results_wales.json  results.json  results_breakdowns.json  results_breakdowns_england.json  results_breakdowns_northern_ireland.json  results_breakdowns_scotland.json  results_breakdowns_wales.json  results_england.json  results_northern_ireland.json  results_scotland.json  results_v2.json  results_v2_england.json  results_v2_northern_ireland.json  results_v2_scotland.json  results_v2_wales.json  results_wales.json
energy_shock/: __init__.py  __main__.py  analysis.py  analysis_constituency.py  analysis_v2.py  baseline.py  config.py  constituency.py  generate.py  sections.py  utils.py
src/app/: globals.css  layout.tsx
src/components/: Dashboard.css  Dashboard.jsx
src/data/: results.json  results_breakdowns_england.json  results_breakdowns_northern_ireland.json  results_breakdowns_wales.json  results_northern_ireland.json
tests/: test_elasticity.py
